--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>hello githud test file.</h1>
+  <h1>hello github test file.</h1>
 </body>
 </html>
